tests/rspack-test/configCases/errors/case-emit/test.filter.js
module.exports = () => "TODO: support case sensitive checking during emitting assets"
